# pypac-demo

./: README.md  pyproject.toml
pypac/: complicated.py  simple.py
scripts/: dot_produkator.py
