[build-system]
requires = [ "setuptools>=61" ]

[project]
name = "pypac-demo"
version = "0.1.0"
description = "Toolkit for astonishing linear algebra"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["linear algebra"]

authors = [
  {email = "ferda@mravenec.cz", name = "Ferda Mravenec"}
]

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
]


[project.urls]
repository = "https://github.com/ibenes/pypac-demo"

[tool.setuptools.package-dir]
"pypac" = "pypac"
"pypac.scripts" = "scripts"

[project.scripts]
dot-produkator = "pypac.scripts.dot_produkator:main"
